# proto-example

./: .gitignore  WORKSPACE.bazel
lib/: BUILD.bazel  person_wrapper.cc  person_wrapper.h
lib/proto/: person.proto
main/: BUILD.bazel  proto-example.cc
