# load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@rules_proto_g/rpc//cpp:defs.bzl", "cpp_proto_library")
# load("@rules_cc//cc:defs.bzl", "cc_library")

proto_library(
    name = "person_proto",
    srcs = ["person.proto"],
    deps = ["@com_google_protobuf//:any_proto"]
)

cc_proto_library(
    name = "cc_person_proto",
    deps = [":person_proto"],
    visibility = ["//main:__pkg__"]
)

cc_library(
    name = "person_wrapper",
    srcs = ["person_wrapper.cc"],
    hdrs = ["person_wrapper.h"],
    deps = [":cc_person_proto"],
    visibility = ["//main:__pkg__"]
)